--- a/UI/src/css/organisms/o-slider.css
+++ b/UI/src/css/organisms/o-slider.css
@@ -9,7 +9,7 @@ o-slider {
         margin-block-start: calc(var(--space-4) * 2);
     }
 
-    &.has-labels {
+    &.has-labels-position-before {
         margin-block-start: 0;
     }
 
